--- a/package.json
+++ b/package.json
@@ -13,10 +13,13 @@
   },
   "dependencies": {
     "bootstrap": "^3.4.1",
+    "bootstrap-icons": "^1.8.1",
+    "history": "^5.0.1",
     "prop-types": "^15.7.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-redux": "^7.2.1",
+    "react-router-dom": "^5.3.0",
     "redux": "^4.1.2"
   },
   "scripts": {
